--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+    </head>
     <body>
         <h1>Woman's Sandal</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
