--- a/page.html
+++ b/page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Woman's Sandal</h1>
+        <h1>Woman's Sandal and other</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
             <ul>
                 <li>100% Leather and Textile</li>
-                <li>Imported</li>
+                <li>Imported some other</li>
                 <li>Rubber sole</li>
                 <li>Heel measures approximately 1.25"</li>
                 <li>Platform measures approximately 1"</li>
