--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body>
-        <h1>Woman's Sandal</h1>
+        <h1>Woman's Sandal 1</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
             <ul>
                 <li>100% Leather and Textile</li>
