--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Woman's Sandal</h1>
+        <h1>Woman's Sandal to will be good</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
             <ul>
                 <li>100% Leather and Textile</li>
