--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
-        <h1>Woman's Sandal 1</h1>
+        <h1>Woman's Sandal</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
-            <ul>
-                <li>100% Leather and Textile</li>
-                <li>Imported</li>
-                <li>Rubber sole</li>
-                <li>Heel measures approximately 1.25"</li>
-                <li>Platform measures approximately 1"</li>
-            </ul>
+        <ul>
+            <li>100% Leather and Textile</li>
+            <li>Imported</li>
+            <li>Rubber sole</li>
+            <li>Heel measures approximately 1.25"</li>
+            <li>Platform measures approximately 1"</li>
+        </ul>
         <a href="#">Buy</a>
     </body>
 </html>
