changing index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
-        <h1>Woman's Sandal</h1>
+        <h1>Men's Sandal</h1>
         <img src="images/sandal.png" alt="sandal" width="150">
         <ul>
             <li>100% Leather and Textile</li>
